# Iris-Flower-model

./: LICENSE  README.md  pyproject.toml
iris_flower_model/: notebook.ipynb
