[tool.poetry]
name = "iris-flower-model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "iris_flower_model"}]

[tool.poetry.dependencies]
python = "^3.11"
scikit-learn = "^1.3.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
